ajustes na logo e nome de saudação

--- a/assets/estilo/home.css
+++ b/assets/estilo/home.css
@@ -102,6 +102,10 @@ body {
   padding: 20px;
 }
 
+.logo img {
+  width: 200px;
+}
+
 nav {
   flex: 1;
   text-align: right;
@@ -557,6 +561,10 @@ nav ul li a:hover {
 }
 
 @media (max-width: 480px) {
+  .logo img {
+    width: 170px;
+  }
+
   .rodape img {
   padding: 0;
   margin-left: 0;
@@ -605,11 +613,5 @@ nav ul li a:hover {
     flex-wrap: wrap;
     padding: 1rem;
     gap: 10px;
-  }
-
-  .logo-container,
-  .header-controls {
-    flex: 1 1 100%;
-    justify-content: center;
   }
 }
