--- a/assets/css/conta.css
+++ b/assets/css/conta.css
@@ -335,6 +335,32 @@ span {
   }
 }
 
+@media (max-width: 480px) {
+  .carrinho-dropdown {
+    width: 60vw;
+    max-width: 320px;
+    right: 5%;
+    top: 50px;
+    font-size: 16px;
+    padding: 10px;
+  }
+
+  .item-carrinho {
+    gap: 10px;
+    padding: 8px 0;
+  }
+
+  .item-carrinho img {
+    width: 60px;
+    height: 60px;
+  }
+
+  .carrinho-botoes {
+    flex-direction: column;
+  }
+}
+
+
 @media (max-width:466px) {
   .content {
     padding: 10px;
