--- a/assets/css/produtos.css
+++ b/assets/css/produtos.css
@@ -358,6 +358,7 @@ header {
   font-weight: bold;
   transition: background-color 0.3s ease;
   margin-top: auto;
+  font-size: 16px;
 }
 
 .produto-btn-comprar:hover,
