--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -45,7 +45,7 @@ section#login {
   background-color: white;
   overflow: hidden;
   width: 250px;
-  height: 515px;
+  height: 530px;
   border-radius: 20px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.48);
   transition: width .3s, height .3s;
@@ -120,7 +120,7 @@ form > input[type=submit] {
   display: block;
   width: 100%;
   height: 40px;
-  margin-top: 5px;
+  margin-top: 35px;
   font-size: 1em;
   color: white;
   background-color: var(--cor-sucesso);
@@ -146,6 +146,7 @@ form > a.botao {
   background-color: white;
   border: 1px solid var(--cor1);
   border-radius: 5px;
+  margin-bottom: 3px;
 }
 
 form > a.botao:hover {
@@ -154,6 +155,11 @@ form > a.botao:hover {
 
 form > a.botao > span {
   font-size: 0.8em;
+}
+
+#link-esqueci-senha {
+  color: #4F4F4F;
+  text-decoration: none;
 }
 
 /* =====================
@@ -169,7 +175,7 @@ form > a.botao > span {
   color: white;
   font-weight: 500;
   border-radius: 8px;
-  z-index: 1000;
+  z-index: 1001;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease-in-out;
 }
@@ -208,3 +214,99 @@ form > a.botao > span {
   color: white;
   animation: shake 0.5s ease-in-out;
 }
+
+/* =====================
+    MODAL 
+===================== */
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal.active {
+  display: flex;
+}
+
+.modal-content {
+  background: #fff;
+  padding: 20px;
+  border-radius: 12px;
+  max-width: 400px;
+  width: 90%;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  position: relative;
+}
+
+.close-modal {
+  position: absolute;
+  right: 12px;
+  top: 8px;
+  font-size: 1.5rem;
+  cursor: pointer;
+  color: #333;
+}
+
+.modal-content h2 {
+  margin-bottom: 10px;
+  font-size: 1.4rem;
+}
+
+.modal-content p {
+  font-size: 0.95rem !important;
+  margin-bottom: 15px;
+  color: #444;
+}
+
+.modal-content .campo {
+  background-color: var(--cor2);
+  border: 2px solid var(--cor2);
+  border-radius: 8px;
+  height: 40px;
+  margin: 5px 0;
+  align-items: center;
+  display: flex; /* garante alinhamento horizontal */
+}
+
+.modal-content .campo input {
+  width: calc(100% - 45px);
+  height: 100%;
+  padding: 4px;
+  font-size: 1em;
+  background-color: var(--cor3);
+  border: none;
+  border-radius: 8px;
+  transform: translateY(0); /* remove o deslocamento do login */
+}
+
+.modal-content .campo span {
+  width: 40px;
+  font-size: 1.9em;
+  padding: 5px;
+  color: white;
+  text-align: center;
+  margin: 2px;
+}
+
+.botao-enviar {
+  background: var(--cor-sucesso);
+  color: #fff;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background 0.3s;
+}
+
+.botao-enviar:hover {
+  background: var(--cor-sucesso-hover);
+}
+
