--- a/assets/css/registro.css
+++ b/assets/css/registro.css
@@ -20,6 +20,13 @@
 /* ===============================
    ESTILO GLOBAL
 ================================== */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
 body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
@@ -36,7 +43,8 @@ header {
   padding: 20px;
   text-align: center;
   position: relative;
-  height: 160px;
+  height: 200px;
+  border-radius: 0px 0px 10px 10px;
 }
 
 header img {
@@ -93,39 +101,53 @@ header a:hover {
 /* ===============================
    FORMULÁRIO
 ================================== */
+/* ===== Formulário ===== */
 .content {
   display: flex;
   flex-direction: column;
   background: var(--branco-neve);
   padding: 20px;
-  margin: 10px;
+  margin: 30px auto;
   border: 2px solid var(--verde-folha);
   border-radius: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   text-align: left;
+  width: 90%;
+  max-width: 600px;
+  gap: 20px;
 }
 
-/* Campos de texto, e-mail, senha etc. */
+input {
+  border-radius: 5px;
+  padding: 4px;
+  border: 1px solid var(--verde-claro);
+}
+
 input[type="text"],
 input[type="tel"],
 input[type="email"],
 input[type="password"],
 input[type="date"] {
-  border-radius: 5px;
-  padding: 8px;
-  font-size: 15px;
-  border: 1px solid var(--verde-claro);
-  width: 50%;
+  padding: 10px;
+  font-size: 16px;
+  width: 100%; /* preenchimento total */
+  margin-top: 5px;
+}
+
+input[type="tel"] {
+  font-family: monospace;
 }
 
 /* Radio buttons (sexo) — estilo neutro */
 input[type="radio"] {
-  accent-color: var(--verde-folha); /* só muda a cor do círculo preenchido */
+  accent-color: var(--verde-folha);
+  /* só muda a cor do círculo preenchido */
   width: auto;
   margin-right: 5px;
 }
 
-label, span {
+label,
+span {
   font-size: 1.1em;
   font-weight: bold;
 }
@@ -143,7 +165,7 @@ label, span {
   background-color: var(--verde-folha);
   color: var(--branco-neve);
   border-radius: 10px;
-  padding: 10px;
+  padding: 8px;
   border: none;
   cursor: pointer;
   font-weight: bold;
@@ -151,7 +173,8 @@ label, span {
 }
 
 #enviar:hover {
-  background-color: var(--marrom-terra);
+  background-color: var(--cinza-pedra);
+  color: var(--branco-neve);
 }
 
 #limpar {
