--- a/assets/css/detalhes-produto.css
+++ b/assets/css/detalhes-produto.css
@@ -242,6 +242,8 @@ body {
 
 /* Ícone do carrinho */
 .carrinho-icone {
+  flex: 1;
+  text-align: right;
   position: absolute; /* posiciona no canto superior direito */
   top: 1rem;
   right: 1rem;
@@ -249,6 +251,10 @@ body {
   color: var(--branco-neve);
   cursor: pointer;
   font-size: 1.5rem;
+}
+
+.carrinho-icone img {
+  max-width: 100%;
 }
 
 /* Imagem do carrinho */
@@ -293,89 +299,6 @@ body {
 .carrinho-dropdown.show {
   display: block;
 }
-
-/* Lista de itens dentro do carrinho */
-#lista-carrinho {
-  max-height: 300px;
-  overflow-y: auto;
-}
-
-/* Item individual do carrinho */
-.item-carrinho {
-  display: flex;
-  align-items: center;
-  gap: 15px;
-  padding: 10px 0;
-  border-bottom: 1px solid var(--cinza-pedra);
-}
-
-.item-carrinho img {
-  width: 80px;
-  height: 80px;
-  object-fit: cover;
-  border-radius: 4px;
-}
-
-/* Total do carrinho */
-.carrinho-total {
-  font-weight: bold;
-  margin: 15px 0;
-  text-align: right;
-  padding-top: 0.5rem;
-}
-
-/* Botões dentro do dropdown do carrinho */
-.carrinho-botoes {
-  display: flex;
-  gap: 10px;
-  margin-top: 15px;
-}
-
-.btn-finalizar,
-.btn-limpar {
-  width: 100%;
-  padding: 10px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 13px;
-  font-weight: bold;
-  transition: background 0.3s;
-}
-
-.btn-finalizar {
-  background: var(--verde-folha);
-  color: var(--branco-neve);
-}
-
-.btn-finalizar:hover {
-  background: var(--marrom-terra);
-}
-
-.btn-limpar {
-  background: #ff4d4d;
-  color: var(--branco-neve);
-}
-
-.btn-limpar:hover {
-  background: #e60000;
-}
-
-.btn-remover {
-  cursor: pointer;
-  color: var(--branco-neve);
-  background-color: var(--marrom-terra);
-  border: none;
-  padding: 5px;
-  border-radius: 4px;
-  font-weight: bold;  
-}
-
-.btn-remover:hover {
-  background: #e60000;
-  transition: background 0.3s;
-}
-
 
 /* Responsividade */
 @media (max-width: 768px) {
